--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,9 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
-          <!-- Маршрут и стоимость -->
 
           <div class="trip-main__trip-controls  trip-controls">
-            <!-- Меню -->
 
-            <!-- Фильтры -->
           </div>
 
           <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
@@ -32,12 +29,10 @@
           <section class="trip-events">
             <h2 class="visually-hidden">Trip events</h2>
 
-            <!-- Сортировка -->
-
-            <!-- Контент -->
           </section>
       </div>
     </main>
+    <script src="sw.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
